[package]
name = "MiPi-1wire-rs"
version = "0.1.0"
authors = ["John Erickson <john.t.erickson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
time = "0.2.16"

[profile.release]
codegen-units=1